Play with font sizes again

--- a/index.html
+++ b/index.html
@@ -167,7 +167,14 @@
         width: 90%;
       }
       body {
-        font-size: 15px;
+        font-size: 16px;
+      }
+      ul.souper {
+        line-height: 150%;
+        font-size: 120%;
+      }
+      li.paiement {
+        font-size: 90%; 
       }
     }
     </style>
