Changed some width

--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       }
       li.paiement {
         font-size: 90%; 
+        margin: 10px 0 0 75px;
       }
+      li em { width: 70px; }
     }
     </style>
     <script type="text/javascript" src="//use.typekit.net/uhy3kyy.js"></script>
